<resources>
    <string name="app_name">BrainNono</string>
    <string name="title1">Brain-Nono</string>
    <string name="title8">NonoGram</string>
    <string name="title8o">NG</string>
    <string name="title8a">&#160;&#160;&#160;5x5&#160;&#160;&#160;</string>
    <string name="title8b">&#160;&#160;&#160;6x6&#160;&#160;&#160;</string>
    <string name="title8c">&#160;&#160;&#160;7x7&#160;&#160;&#160;</string>
    <string name="title8d">&#160;&#160;&#160;8x8&#160;&#160;&#160;</string>
    <string name="title8e">&#160;&#160;&#160;9x9&#160;&#160;&#160;</string>
    <string name="title8f">&#160;10x10&#160;</string>
    <string name="title9">Das ist es</string>
    <string name="titleNone"></string>
    <string name="b0">0</string>
    <string name="b1">1</string>
    <string name="b2">2</string>
    <string name="b3">3</string>
    <string name="b4">4</string>
    <string name="b5">5</string>
    <string name="b6">6</string>
    <string name="b7">7</string>
    <string name="b8">8</string>
    <string name="b9">9</string>
    <string name="b10">10</string>
    <string name="b11">11</string>
    <string name="b12">12</string>
    <string name="b13">13</string>
    <string name="b14">14</string>
    <string name="b15">15</string>
    <string name="b16">16</string>
    <string name="b17">17</string>
    <string name="b18">18</string>
    <string name="b19">19</string>
    <string name="b20">20</string>
    <string name="b21">21</string>
    <string name="b22">22</string>
    <string name="b23">23</string>
    <string name="b24">24</string>
    <string name="b25">25</string>
    <string name="txt">Ausgabe</string>
    <string name="Mischa">Mischen</string>
    <string name="Mischa2">Neu-Mischen</string>
    <string name="AnLeit">Anleitung</string>
    <string name="Warte">Hit me.</string>
    <string name="NeuStart">Neu Start</string>
    <string name="Zuge">Züge:</string>
    <string name="Punkte">Punkte:</string>
    <string name="Loesung"></string>
    <string name="neuSt">Neu Start</string>
    <string name="AnleitNonoG">
        Nonogram\n\nEs gilt das muster herauszufinden.\n
        Die zahlen am rand geben an, wieviele punkte ohne leerraum gesetzt sind.\n\n
        bsp.: 1-1-1 = RgRgR / 2-2 = RRgRR\n1-1 = RgRgg oder gRgRg oder ggRgR%2$s%1$s
    </string>
    <string name="Wunschliste">\n-----\n
        Meine Amazon Wunschliste: https://ogy.de/hiaq\n
        Wer möchte und kann, darf mir gerne etwas von meiner Wunschliste zukommen lassen, oder auch nicht.
    </string>
    <string name="Losung">\n-----\n
        GelbGrün = Leer und Richtig\n
        Grün = Gesetzt aber Falsch\n
        Rot = Falsch\n
        Gelb = Richtig
    </string>

</resources>