<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/iView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_marginTop="-0dp"
        android:background="@drawable/hintergrund"
        android:gravity="center"
        android:src="@drawable/ic_brain" />

    <TextView
        android:id="@+id/Kopf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:text="@string/title1"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="26sp"
        android:textStyle="bold|italic" />

    <RelativeLayout
        android:id="@+id/nixy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/iView"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/NonoGram"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:text="@string/title8"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/butty3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/nixy"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/NonoG5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/title8a"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/NonoG6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:layout_toEndOf="@id/NonoG5"
            android:text="@string/title8b"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/NonoG7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:layout_below="@id/NonoG5"
            android:text="@string/title8c"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/NonoG8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/NonoG6"
            android:layout_toEndOf="@id/NonoG7"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/title8d"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/NonoG9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/NonoG7"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/title8e"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/NonoG10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/NonoG8"
            android:layout_toEndOf="@id/NonoG9"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/title8f"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:textStyle="bold" />
    </RelativeLayout>

</RelativeLayout>